--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                 المسرح
               </button>
               <a
-                href="https://taryamall.my.canva.site/"
+                href="https://taryaamlibrary.netlify.app"
                 target="_blank"
                 rel="noopener noreferrer"
                 class="px-3 py-2 rounded-lg text-sm text-parchment hover:bg-gold/30 transition-all whitespace-nowrap flex items-center gap-1"
